# cutback

./: CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
doc/: cutback.1
src/: cli.rs  differ.rs  git_backend.rs  lib.rs  main.rs  model.rs  render.rs  term.rs  watcher.rs
src/xml_parser/: json_lite.rs  mod.rs  timecode.rs
tests/: cli.rs  differ.rs  git_backend.rs  parser.rs  watcher.rs
tests/data/: markers.kdenlive  timelapse-a.kdenlive  timelapse-b.kdenlive  timelapse-c.kdenlive
