[package]
name = "cutback"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Automatic version control for Kdenlive projects"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
git2 = { version = "0.19", default-features = false }
notify = "6.1"
roxmltree = "0.20"
thiserror = "1.0"

[profile.release]
strip = true
lto = true
